--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "pinia": "^2.0.23",
-    "vue": "^3.2.41",
-    "vue-router": "^4.1.5",
-    "sass": "^1.41.1",
-    "element-plus": "^2.2.17",
-    "mathjs": "^11.3.0",
+    "axios": "^0.21.4",
     "dateformat": "^5.0.3",
+    "element-plus": "^2.2.17",
     "lodash": "^4.17.21",
+    "mathjs": "^11.3.0",
     "moment": "~2.29.1",
-    "axios": "^0.21.4"
+    "pinia": "^2.0.23",
+    "sass": "^1.41.1",
+    "store": "^2.0.12",
+    "vue": "^3.2.41",
+    "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.2",
